# RAG-Powered-Support-Assistant-for-TechNova

./: HINTS.ipynb  README.md  REPORT.md  RUBRIC.ipynb  SUBMISSION_GUIDELINES.ipynb  eval_results.json  evaluate.py  main.py  project_requirements.ipynb  pyproject.toml  requirements.txt  solution.ipynb
