[project]
name = "rag-powered-support-assistant-for-technova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.16.0",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
